--- a/src/drafs/etfs_lasso_rolling_causal_graph.ipynb
+++ b/src/drafs/etfs_lasso_rolling_causal_graph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
        "[5 rows x 137 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,9 +323,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "rolling LASSO: 100%|██████████| 86/86 [00:05<00:00, 17.13it/s]\n",
-      "rolling LASSO: 100%|██████████| 86/86 [00:05<00:00, 17.07it/s]\n",
-      "rolling LASSO: 100%|██████████| 86/86 [00:04<00:00, 17.56it/s]\n"
+      "rolling LASSO: 100%|██████████| 86/86 [00:05<00:00, 15.58it/s]\n",
+      "rolling LASSO: 100%|██████████| 86/86 [00:05<00:00, 15.89it/s]\n",
+      "rolling LASSO: 100%|██████████| 86/86 [00:05<00:00, 15.88it/s]\n"
      ]
     }
    ],
@@ -399,11 +399,14 @@
     "        \n",
     "        Xt = target_subset_df.iloc[start:(end + step), :][selected_columns]\n",
     "        yt = target_subset_df.iloc[start:(end + step), :][[target]]\n",
+    "        Xt_test = target_subset_df.iloc[(end + step - p):(end + step + 1), :][[target] + selected_columns]\n",
     "\n",
     "        # create lags of Xt variables\n",
     "        for c in Xt.columns:\n",
     "            for lag in range(1, p + 1):\n",
     "                Xt[\"{}(t-{})\".format(c, lag)] = Xt[c].shift(lag)\n",
+    "                Xt_test[\"{}(t-{})\".format(c, lag)] = Xt_test[c].shift(lag)\n",
+    "            Xt.drop(c, axis=1, inplace=True)\n",
     "            \n",
     "            Xt.rename(columns={c: \"{}(t)\".format(c, 0)}, inplace=True)\n",
     "\n",
@@ -446,7 +449,7 @@
     "all_summary_stability = []\n",
     "for target in targets:\n",
     "    tmp_parents_of_target_df = all_parents_of_targets_df.loc[all_parents_of_targets_df[\"target\"] == target]\n",
-    "    summary_parents_of_target_df = tmp_parents_of_target_df.groupby(\"variable\").sum(numeric_only=True)[[\"value\"]].reset_index()\n",
+    "    summary_parents_of_target_df = tmp_parents_of_target_df.fillna(0).groupby(\"variable\").sum(numeric_only=True)[[\"value\"]].reset_index()\n",
     "    summary_parents_of_target_df.columns = [\"feature_name\", \"count\"]\n",
     "    summary_parents_of_target_df[\"fred\"] = [name.split(\"(t\")[0] for name in summary_parents_of_target_df[\"feature_name\"]]\n",
     "    summary_parents_of_target_df = summary_parents_of_target_df[[\"fred\", \"feature_name\", \"count\"]]\n",
@@ -457,7 +460,8 @@
     "\n",
     "    merge_test_cluster_df = pd.merge(test_df, clusters_df, on=[\"fred\"])\n",
     "    stability_df = merge_test_cluster_df.pivot_table(index=[\"index\"], columns=[\"cluster\"], values=[\"value\"]).fillna(0)\n",
-    "    summary_stability_df = (stability_df.sum(axis=0) / stability_df.shape[0]).sort_values(ascending=False).reset_index().drop([\"level_0\"], axis=1)\n",
+    "    tot = stability_df.shape[0]\n",
+    "    summary_stability_df = (stability_df.sum() / tot).sort_values(ascending=False).reset_index().drop([\"level_0\"], axis=1)\n",
     "    summary_stability_df.columns = [\"cluster\", \"stability\"]\n",
     "    summary_stability_df[\"target\"] = target\n",
     "\n",
@@ -468,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -503,39 +507,23 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">SPY</th>\n",
+       "      <th>SPY</th>\n",
        "      <th>16</th>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">XLE</th>\n",
        "      <th>13</th>\n",
-       "      <td>0.011628</td>\n",
+       "      <td>0.666667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th rowspan=\"4\" valign=\"top\">XLE</th>\n",
        "      <th>16</th>\n",
-       "      <td>1.000000</td>\n",
+       "      <td>0.333333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>XLK</th>\n",
        "      <th>13</th>\n",
-       "      <td>0.360465</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>0.058140</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.011628</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">XLK</th>\n",
-       "      <th>16</th>\n",
        "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>0.337209</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -545,16 +533,12 @@
        "                stability\n",
        "target cluster           \n",
        "SPY    16        1.000000\n",
-       "       13        0.011628\n",
-       "XLE    16        1.000000\n",
-       "       13        0.360465\n",
-       "       7         0.058140\n",
-       "       4         0.011628\n",
-       "XLK    16        1.000000\n",
-       "       13        0.337209"
+       "XLE    13        0.666667\n",
+       "       16        0.333333\n",
+       "XLK    13        1.000000"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
