--- a/src/drafs/etfs_rolling_causal_graph.ipynb
+++ b/src/drafs/etfs_rolling_causal_graph.ipynb
@@ -275,9 +275,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "rolling VAR-LiNGAM: SPY: 100%|██████████| 86/86 [00:57<00:00,  1.50it/s]\n",
-      "rolling VAR-LiNGAM: XLE: 100%|██████████| 86/86 [00:57<00:00,  1.51it/s]\n",
-      "rolling VAR-LiNGAM: XLK: 100%|██████████| 86/86 [00:57<00:00,  1.50it/s]\n"
+      "rolling VAR-LiNGAM: SPY: 100%|██████████| 86/86 [00:57<00:00,  1.48it/s]\n",
+      "rolling VAR-LiNGAM: XLE: 100%|██████████| 86/86 [00:58<00:00,  1.48it/s]\n",
+      "rolling VAR-LiNGAM: XLK: 100%|██████████| 86/86 [00:57<00:00,  1.48it/s]\n"
      ]
     }
    ],
@@ -378,14 +378,199 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target = \"SPY\"\n",
+    "\n",
+    "tmp_parents_of_target_df = all_parents_of_targets_df.loc[all_parents_of_targets_df[\"target\"] == target]\n",
+    "summary_parents_of_target_df = tmp_parents_of_target_df.fillna(0).groupby(\"variable\").sum(numeric_only=True)[[\"value\"]].reset_index()\n",
+    "summary_parents_of_target_df.columns = [\"feature_name\", \"count\"]\n",
+    "summary_parents_of_target_df[\"fred\"] = [name.split(\"(t\")[0] for name in summary_parents_of_target_df[\"feature_name\"]]\n",
+    "summary_parents_of_target_df = summary_parents_of_target_df[[\"fred\", \"feature_name\", \"count\"]]\n",
+    "summary_parents_of_target_df = pd.merge(summary_parents_of_target_df, clusters_df, on=\"fred\")\n",
+    "summary_parents_of_target_df = summary_parents_of_target_df.sort_values(by=\"cluster\", ascending=False)\n",
+    "\n",
+    "test_df = tmp_parents_of_target_df.drop([\"target\"], axis=1).rename(columns={\"variable\": \"fred\"})\n",
+    "test_df[\"fred\"] = [name.split(\"(t\")[0] for name in test_df[\"fred\"]]\n",
+    "merge_test_cluster_df = pd.merge(test_df, clusters_df, on=[\"fred\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "       cluster\n",
+       "value  1          1.000000\n",
+       "       2          0.837209\n",
+       "       3          0.802326\n",
+       "       5          0.906977\n",
+       "       9          0.988372\n",
+       "       10         0.686047\n",
+       "       11         1.000000\n",
+       "       12         0.872093\n",
+       "       14         1.000000\n",
+       "       15         0.244186\n",
+       "       17         0.918605\n",
+       "       18         0.267442\n",
+       "       19         0.953488\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tot = merge_test_cluster_df.pivot_table(index=[\"index\"], columns=[\"cluster\"], values=[\"value\"]).shape[0]\n",
+    "merge_test_cluster_df.pivot_table(index=[\"index\"], columns=[\"cluster\"], values=[\"value\"]).fillna(0).sum() / tot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>fred</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2012-06-01</td>\n",
+       "      <td>SPY</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2012-08-01</td>\n",
+       "      <td>SPY</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2012-10-01</td>\n",
+       "      <td>SPY</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2012-11-01</td>\n",
+       "      <td>SPY</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>SPY</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2059</th>\n",
+       "      <td>2022-03-01</td>\n",
+       "      <td>CPITRNSL</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2060</th>\n",
+       "      <td>2022-04-01</td>\n",
+       "      <td>CPITRNSL</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2061</th>\n",
+       "      <td>2022-06-01</td>\n",
+       "      <td>CPITRNSL</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2062</th>\n",
+       "      <td>2022-07-01</td>\n",
+       "      <td>CPITRNSL</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2063</th>\n",
+       "      <td>2022-08-01</td>\n",
+       "      <td>CPITRNSL</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2064 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           index      fred  value\n",
+       "0     2012-06-01       SPY    1.0\n",
+       "1     2012-08-01       SPY    1.0\n",
+       "2     2012-10-01       SPY    1.0\n",
+       "3     2012-11-01       SPY    1.0\n",
+       "4     2013-01-01       SPY    1.0\n",
+       "...          ...       ...    ...\n",
+       "2059  2022-03-01  CPITRNSL    NaN\n",
+       "2060  2022-04-01  CPITRNSL    1.0\n",
+       "2061  2022-06-01  CPITRNSL    NaN\n",
+       "2062  2022-07-01  CPITRNSL    NaN\n",
+       "2063  2022-08-01  CPITRNSL    NaN\n",
+       "\n",
+       "[2064 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "all_summary_stability = []\n",
     "for target in targets:\n",
     "    tmp_parents_of_target_df = all_parents_of_targets_df.loc[all_parents_of_targets_df[\"target\"] == target]\n",
-    "    summary_parents_of_target_df = tmp_parents_of_target_df.groupby(\"variable\").sum(numeric_only=True)[[\"value\"]].reset_index()\n",
+    "    summary_parents_of_target_df = tmp_parents_of_target_df.fillna(0).groupby(\"variable\").sum(numeric_only=True)[[\"value\"]].reset_index()\n",
     "    summary_parents_of_target_df.columns = [\"feature_name\", \"count\"]\n",
     "    summary_parents_of_target_df[\"fred\"] = [name.split(\"(t\")[0] for name in summary_parents_of_target_df[\"feature_name\"]]\n",
     "    summary_parents_of_target_df = summary_parents_of_target_df[[\"fred\", \"feature_name\", \"count\"]]\n",
@@ -396,7 +581,8 @@
     "\n",
     "    merge_test_cluster_df = pd.merge(test_df, clusters_df, on=[\"fred\"])\n",
     "    stability_df = merge_test_cluster_df.pivot_table(index=[\"index\"], columns=[\"cluster\"], values=[\"value\"]).fillna(0)\n",
-    "    summary_stability_df = (stability_df.sum(axis=0) / stability_df.shape[0]).sort_values(ascending=False).reset_index().drop([\"level_0\"], axis=1)\n",
+    "    tot = stability_df.shape[0]\n",
+    "    summary_stability_df = (stability_df.sum() / tot).sort_values(ascending=False).reset_index().drop([\"level_0\"], axis=1)\n",
     "    summary_stability_df.columns = [\"cluster\", \"stability\"]\n",
     "    summary_stability_df[\"target\"] = target\n",
     "\n",
@@ -407,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +864,7 @@
        "       13        0.011628"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
