--- a/src/drafs/spy_lasso_rolling_causal_graph.ipynb
+++ b/src/drafs/spy_lasso_rolling_causal_graph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
        "[5 rows x 137 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +469,7 @@
        "108       PPICMM        1              PPI: Metals and metal products:"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,14 +547,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "rolling VAR-LiNGAM: 100%|██████████| 86/86 [00:05<00:00, 16.65it/s]\n"
+      "rolling LASSO: 100%|██████████| 86/86 [00:05<00:00, 15.92it/s]\n"
      ]
     }
    ],
@@ -575,11 +575,14 @@
     "    \n",
     "    Xt = target_subset_df.iloc[start:(end + step), :][selected_columns]\n",
     "    yt = target_subset_df.iloc[start:(end + step), :][[target]]\n",
+    "    Xt_test = target_subset_df.iloc[(end + step - p):(end + step + 1), :][[target] + selected_columns]\n",
     "\n",
     "    # create lags of Xt variables\n",
     "    for c in Xt.columns:\n",
     "        for lag in range(1, p + 1):\n",
     "            Xt[\"{}(t-{})\".format(c, lag)] = Xt[c].shift(lag)\n",
+    "            Xt_test[\"{}(t-{})\".format(c, lag)] = Xt_test[c].shift(lag)\n",
+    "        Xt.drop(c, axis=1, inplace=True)\n",
     "        \n",
     "        Xt.rename(columns={c: \"{}(t)\".format(c, 0)}, inplace=True)\n",
     "\n",
@@ -610,11 +613,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "summary_parents_of_target_df = parents_of_target_df.sum().reset_index()\n",
+    "summary_parents_of_target_df = parents_of_target_df.fillna(0).sum().reset_index()\n",
     "summary_parents_of_target_df.columns = [\"feature_name\", \"count\"]\n",
     "summary_parents_of_target_df[\"fred\"] = [name.split(\"(t\")[0] for name in summary_parents_of_target_df[\"feature_name\"]]\n",
     "summary_parents_of_target_df = summary_parents_of_target_df[[\"fred\", \"feature_name\", \"count\"]]\n",
@@ -631,30 +634,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "       cluster\n",
-       "value  16         1.000000\n",
-       "       13         0.011628\n",
+       "value  16         0.593023\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(stability_df.sum(axis=0) / stability_df.shape[0]).sort_values(ascending=False)"
+    "(stability_df.sum(axis=0) / parents_of_target_df.shape[0]).sort_values(ascending=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +715,7 @@
        "112  CPIMEDSL       16         CPI : Medical Care"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -758,10 +760,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -771,11 +769,10 @@
       "text/plain": [
        "         feature_name\n",
        "cluster              \n",
-       "16                  2\n",
-       "13                  1"
+       "16                  1"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -786,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -821,26 +818,10 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>UMCSENTx</td>\n",
-       "      <td>UMCSENTx(t)</td>\n",
-       "      <td>86.0</td>\n",
-       "      <td>16</td>\n",
-       "      <td>Consumer Sentiment Index</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>UMCSENTx</td>\n",
        "      <td>UMCSENTx(t-1)</td>\n",
-       "      <td>38.0</td>\n",
+       "      <td>51.0</td>\n",
        "      <td>16</td>\n",
        "      <td>Consumer Sentiment Index</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>GS5</td>\n",
-       "      <td>GS5(t)</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>13</td>\n",
-       "      <td>5-Year Treasury Rate</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -848,12 +829,10 @@
       ],
       "text/plain": [
        "       fred   feature_name  count  cluster               description\n",
-       "0  UMCSENTx    UMCSENTx(t)   86.0       16  Consumer Sentiment Index\n",
-       "1  UMCSENTx  UMCSENTx(t-1)   38.0       16  Consumer Sentiment Index\n",
-       "2       GS5         GS5(t)    1.0       13      5-Year Treasury Rate"
+       "0  UMCSENTx  UMCSENTx(t-1)   51.0       16  Consumer Sentiment Index"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
