--- a/src/drafs/etfs_rolling_causal_graph.ipynb
+++ b/src/drafs/etfs_rolling_causal_graph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -252,32 +252,32 @@
        "[5 rows x 137 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(os.path.join(os.getcwd(), 'data', 'inputs', 'big_monthly_ret_etfs_macro_transf.csv'))\n",
+    "df = pd.read_csv(os.path.join(os.path.dirname(os.getcwd()), 'data', 'inputs', 'etfs_macro_large.csv'))\n",
     "df.set_index('date', inplace=True)\n",
     "\n",
-    "des = pd.read_csv(os.path.join(os.getcwd(), 'data', 'utils', 'fredmd_description.csv'), sep=';')\n",
+    "des = pd.read_csv(os.path.join(os.path.dirname(os.getcwd()), 'data', 'utils', 'fredmd_description.csv'), sep=';')\n",
     "\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "rolling VAR-LiNGAM: SPY: 100%|██████████| 86/86 [00:57<00:00,  1.48it/s]\n",
-      "rolling VAR-LiNGAM: XLE: 100%|██████████| 86/86 [00:58<00:00,  1.48it/s]\n",
-      "rolling VAR-LiNGAM: XLK: 100%|██████████| 86/86 [00:57<00:00,  1.48it/s]\n"
+      "rolling VAR-LiNGAM: SPY: 100%|██████████| 86/86 [00:57<00:00,  1.51it/s]\n",
+      "rolling VAR-LiNGAM: XLE: 100%|██████████| 86/86 [00:58<00:00,  1.46it/s]\n",
+      "rolling VAR-LiNGAM: XLK: 100%|██████████| 86/86 [00:57<00:00,  1.50it/s]\n"
      ]
     }
    ],
@@ -378,7 +378,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>variable</th>\n",
+       "      <th>value</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2012-06-01</td>\n",
+       "      <td>SPY(t-1)</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>SPY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2012-08-01</td>\n",
+       "      <td>SPY(t-1)</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>SPY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2012-10-01</td>\n",
+       "      <td>SPY(t-1)</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>SPY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2012-11-01</td>\n",
+       "      <td>SPY(t-1)</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>SPY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>SPY(t-1)</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>SPY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2059</th>\n",
+       "      <td>2022-03-01</td>\n",
+       "      <td>CPITRNSL(t-1)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>SPY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2060</th>\n",
+       "      <td>2022-04-01</td>\n",
+       "      <td>CPITRNSL(t-1)</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>SPY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2061</th>\n",
+       "      <td>2022-06-01</td>\n",
+       "      <td>CPITRNSL(t-1)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>SPY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2062</th>\n",
+       "      <td>2022-07-01</td>\n",
+       "      <td>CPITRNSL(t-1)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>SPY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2063</th>\n",
+       "      <td>2022-08-01</td>\n",
+       "      <td>CPITRNSL(t-1)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>SPY</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2064 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           index       variable  value target\n",
+       "0     2012-06-01       SPY(t-1)    1.0    SPY\n",
+       "1     2012-08-01       SPY(t-1)    1.0    SPY\n",
+       "2     2012-10-01       SPY(t-1)    1.0    SPY\n",
+       "3     2012-11-01       SPY(t-1)    1.0    SPY\n",
+       "4     2013-01-01       SPY(t-1)    1.0    SPY\n",
+       "...          ...            ...    ...    ...\n",
+       "2059  2022-03-01  CPITRNSL(t-1)    NaN    SPY\n",
+       "2060  2022-04-01  CPITRNSL(t-1)    1.0    SPY\n",
+       "2061  2022-06-01  CPITRNSL(t-1)    NaN    SPY\n",
+       "2062  2022-07-01  CPITRNSL(t-1)    NaN    SPY\n",
+       "2063  2022-08-01  CPITRNSL(t-1)    NaN    SPY\n",
+       "\n",
+       "[2064 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmp_parents_of_target_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +563,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
