first commit dags report

--- a/src/dags_report.ipynb
+++ b/src/dags_report.ipynb
@@ -2,55 +2,133 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/y5/gwwq15s92v97s_yvjxy3cqn40000gn/T/ipykernel_44028/860168724.py:14: MatplotlibDeprecationWarning: The seaborn styles shipped by Matplotlib are deprecated since 3.6, as they no longer correspond to the styles shipped by seaborn. However, they will remain available as 'seaborn-v0_8-<style>'. Alternatively, directly use the seaborn API instead.\n",
-      "  plt.style.use('seaborn')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import os\n",
     "import glob\n",
-    "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
-    "import warnings\n",
+    "from lingam.utils import make_dot\n",
     "import matplotlib.pyplot as plt\n",
-    "from IPython.display import HTML, display, Markdown\n",
-    "import seaborn as sns\n",
     "import numpy as np\n",
     "\n",
-    "from metadata.etfs import etfs_large, etfs_small\n",
-    "from utils.conn_data import load_pickle\n",
-    "\n",
-    "plt.style.use('seaborn')"
+    "from utils.conn_data import load_pickle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "outputs_path = os.path.join(os.path.dirname(os.getcwd()), \"src\", \"data\", \"outputs\")\n",
     "des = pd.read_csv(os.path.join(os.getcwd(), 'data', 'utils', 'fredmd_description.csv'), sep=';')\n",
     "\n",
-    "fs_method = \"var-lingam\"\n",
+    "fs = \"var-lingam\"\n",
     "etf = \"SPY\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "results_files = glob.glob(os.path.join(outputs_path, fs_method, \"etfs_macro_large\", \"*.pickle\"))\n"
+    "results_files = glob.glob(os.path.join(outputs_path, fs, \"etfs_macro_large\", \"*.pickle\"))\n",
+    "\n",
+    "for file in results_files:\n",
+    "    if etf in file:\n",
+    "        obj = load_pickle(path=file)\n",
+    "        break\n",
+    "    \n",
+    "obj = load_pickle(path=file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['predictions', 'parents_of_target', 'dags', 'args'])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['20031231',\n",
+       " '20040131',\n",
+       " '20040229',\n",
+       " '20040331',\n",
+       " '20040430',\n",
+       " '20040531',\n",
+       " '20040630',\n",
+       " '20040731',\n",
+       " '20040831',\n",
+       " '20040930']"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(obj[\"dags\"].keys())[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Great Financial Crisis fo 2007-2008\n",
+    "gfc = obj[\"dags\"][\"20080930\"]\n",
+    "\n",
+    "# Covid Crisis of 2020\n",
+    "covid = obj[\"dags\"][\"20200331\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'columns'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/Users/danieloliveira/Documents/Daniel/codes/cml-fin/src/dags_report.ipynb Cell 7\u001b[0m line \u001b[0;36m6\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/danieloliveira/Documents/Daniel/codes/cml-fin/src/dags_report.ipynb#X10sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m labels \u001b[39m=\u001b[39m []\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/danieloliveira/Documents/Daniel/codes/cml-fin/src/dags_report.ipynb#X10sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(p\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m):\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/danieloliveira/Documents/Daniel/codes/cml-fin/src/dags_report.ipynb#X10sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     \u001b[39mfor\u001b[39;00m colname \u001b[39min\u001b[39;00m X0\u001b[39m.\u001b[39;49mcolumns:\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/danieloliveira/Documents/Daniel/codes/cml-fin/src/dags_report.ipynb#X10sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m         \u001b[39mif\u001b[39;00m i \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/danieloliveira/Documents/Daniel/codes/cml-fin/src/dags_report.ipynb#X10sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m             labels\u001b[39m.\u001b[39mappend(\u001b[39m\"\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m(t)\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(colname, i))\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'columns'"
+     ]
+    }
+   ],
+   "source": [
+    "p, k = gfc[\"dag\"].shape[0] - 1, gfc[\"dag\"].shape[1]\n",
+    "X0 = pd.DataFrame(gfc[\"dag\"][0], columns=gfc[\"labels\"][\"labels0\"])\n",
+    "\n",
+    "make_dot(np.hstack(gfc[\"dag\"]), ignore_shape=True, lower_limit=gfc[\"threshold\"], labels=gfc[\"labels\"][\"labels0\"])"
    ]
   },
   {
@@ -59,108 +137,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "warnings.simplefilter(\"ignore\")\n",
+    "p, k = covid[\"dag\"].shape[0] - 1, covid[\"dag\"].shape[1]\n",
+    "X0 = pd.DataFrame(covid[\"dag\"][0], columns=covid[\"labels\"][\"labels0\"])\n",
     "\n",
-    "\n",
-    "all_metrics = []\n",
-    "all_rolling_metrics = []\n",
-    "all_stability = []\n",
-    "all_parents = []\n",
-    "for fs in fs_methods:\n",
-    "\n",
-    "    if plot_ts:\n",
-    "        display(Markdown(f\"## {fs}\"))\n",
-    "\n",
-    "    # list results files with glob\n",
-    "    results_files = glob.glob(os.path.join(outputs_path, fs, \"etfs_macro_large\", \"*.pickle\"))\n",
-    "\n",
-    "    # load results files\n",
-    "    stability = []\n",
-    "    metrics = []\n",
-    "    for file in results_files:\n",
-    "        etf = file.split(fs)[-1].split(\"/\")[-1].split(\"_\")[0]\n",
-    "\n",
-    "        if (etf_focus != etf) and (etf_focus is not None):\n",
-    "            continue\n",
-    "        else:\n",
-    "            pass\n",
-    "\n",
-    "        obj = load_pickle(path=file)\n",
-    "\n",
-    "        # plot predictions\n",
-    "        predictions_df = obj['predictions']\n",
-    "        predictions_2020_df = predictions_df.loc[\"2020-01-01\":\"2020-12-01\"]\n",
-    "\n",
-    "        if plot_ts:\n",
-    "            fig, ax = plt.subplots(figsize=(10, 5))\n",
-    "            ax.set_title(label=f'OOS Predictions for {etf}', fontsize=15)\n",
-    "            ax.plot(pd.to_datetime(predictions_df.index), predictions_df[\"prediction\"], label=\"predictions\")\n",
-    "            ax.plot(pd.to_datetime(predictions_df.index), predictions_df[\"true\"], label=\"true\")\n",
-    "            plt.xlabel(\"Date\")\n",
-    "            plt.ylabel(\"Returns\")\n",
-    "            plt.legend(loc='best', fontsize=10)   \n",
-    "            plt.show()\n",
-    "\n",
-    "        # compute rolling mse\n",
-    "        rolling_metric_df = predictions_df.copy()\n",
-    "        rolling_metric_df[\"diff\"] = rolling_metric_df[\"true\"] - rolling_metric_df[\"prediction\"]\n",
-    "\n",
-    "        # rolling mse\n",
-    "        rolling_metric_df[\"rolling_var\"] = rolling_metric_df[\"prediction\"].rolling(12).var()\n",
-    "        rolling_metric_df[\"rolling_bias\"] = (rolling_metric_df[\"true\"] - rolling_metric_df[\"prediction\"].rolling(12).mean()).pow(2)\n",
-    "        rolling_metric_df[\"rolling_mse\"] = rolling_metric_df[\"rolling_var\"] + rolling_metric_df[\"rolling_bias\"]\n",
-    "        rolling_metric_df[\"rolling_var\"] = (rolling_metric_df[\"rolling_var\"] / rolling_metric_df[\"rolling_mse\"]) * 100\n",
-    "        rolling_metric_df[\"rolling_bias\"] = (rolling_metric_df[\"rolling_bias\"] / rolling_metric_df[\"rolling_mse\"]) * 100\n",
-    "        rolling_metric_df = rolling_metric_df[[\"rolling_mse\", \"rolling_var\", \"rolling_bias\"]]\n",
-    "\n",
-    "        # add info\n",
-    "        rolling_metric_df[\"fs\"] = fs\n",
-    "        rolling_metric_df[\"etf\"] = etf\n",
-    "\n",
-    "        # melt\n",
-    "        melt_rolling_metric_df = rolling_metric_df.reset_index().melt([\"date\", \"fs\", \"etf\"])\n",
-    "\n",
-    "        # compute forecast metrics\n",
-    "        mse = mean_squared_error(predictions_df[\"true\"], predictions_df[\"prediction\"])\n",
-    "        mae = mean_absolute_error(predictions_df[\"true\"], predictions_df[\"prediction\"])\n",
-    "        mse_2020 = mean_squared_error(predictions_2020_df[\"true\"], predictions_2020_df[\"prediction\"])\n",
-    "        mae_2020 = mean_absolute_error(predictions_2020_df[\"true\"], predictions_2020_df[\"prediction\"])\n",
-    "        # bias = (predictions_df[\"true\"] - np.mean(predictions_df[\"prediction\"], axis=1)) ** 2\n",
-    "        # var = np.var(predictions_df[\"prediction\"], axis=1)\n",
-    "\n",
-    "        # compute cluster stability metrics\n",
-    "        parents_of_target_df = obj[\"parents_of_target\"]\n",
-    "\n",
-    "        # save parents\n",
-    "        parents_of_target_df[\"fs\"] = fs\n",
-    "        parents_of_target_df[\"etf\"] = etf\n",
-    "        \n",
-    "        tot = len(parents_of_target_df[\"date\"].unique())\n",
-    "        stability_df = (parents_of_target_df.fillna(0).groupby([\"cluster\"]).sum()[[\"value\"]] / tot).sort_values(by=\"value\", ascending=False)\n",
-    "        stability_df = pd.concat({etf: stability_df}, names=['etf'])\n",
-    "        stability.append(stability_df)\n",
-    "\n",
-    "        stability_measure = (stability_df).sum().iloc[0] / stability_df.shape[0]\n",
-    "        metrics_df = pd.DataFrame({\n",
-    "            \"fs\": fs, \n",
-    "            \"etf\": etf, \n",
-    "            \"mse\": [mse],\n",
-    "            \"mae\": [mae], \n",
-    "            # \"bias\": [bias],\n",
-    "            # \"var\": [var],\n",
-    "            \"mse_2020\": [mse_2020], \n",
-    "            \"mae_2020\": [mae_2020],\n",
-    "            \"stability\": stability_measure})\n",
-    "        metrics.append(metrics_df)\n",
-    "        all_rolling_metrics.append(melt_rolling_metric_df)\n",
-    "        all_parents.append(parents_of_target_df)\n",
-    "    \n",
-    "    all_metrics.append(pd.concat(metrics).set_index([\"fs\", \"etf\"]))\n",
-    "    all_stability.append(pd.concat(stability))\n",
-    "all_metrics_df = pd.concat(all_metrics)\n",
-    "all_rolling_metrics_df = pd.concat(all_rolling_metrics)\n",
-    "all_parents_df = pd.concat(all_parents)\n",
-    "melted_all_metrics_df = all_metrics_df.reset_index().melt(id_vars=[\"fs\", \"etf\"])"
+    "make_dot(np.hstack(covid[\"dag\"]), ignore_shape=True, lower_limit=covid[\"threshold\"], labels=covid[\"labels\"][\"labels0\"])"
    ]
   }
  ],
