--- a/src/drafs/python_r_connection.ipynb
+++ b/src/drafs/python_r_connection.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/danieloliveira/opt/anaconda3/envs/new_environment/lib/python3.7/site-packages/rpy2/robjects/pandas2ri.py:17: FutureWarning: pandas.core.index is deprecated and will be removed in a future version.  The public classes are available in the top-level namespace.\n",
+      "  from pandas.core.index import Index as PandasIndex\n"
+     ]
+    }
+   ],
    "source": [
     "import rpy2.robjects as robjects\n",
     "from rpy2.robjects import pandas2ri\n",
@@ -18,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +66,7 @@
       "        0.00\n",
       "      0.0000\n",
       "      0.0000\n",
-      "     0.42\n",
+      "     0.53\n",
       "  \n",
       "\n",
       "X3       \n",
@@ -105,6 +114,7 @@
     "Y = np.concatenate((Ya, Yb))\n",
     "\n",
     "Xmatrix = np.column_stack((X1, X2, X3))\n",
+    "Xmatrix_df = pd.DataFrame(Xmatrix, columns=['X1', 'X2', 'X3'])\n",
     "\n",
     "# Convert numpy arrays to R objects\n",
     "r_Xmatrix = numpy2ri.numpy2ri(Xmatrix)\n",
@@ -123,6 +133,8 @@
     "        par.test = list(grid = seq(0, length(Y), length(Y)/10), complements = FALSE, link = sum,\n",
     "        alpha = 0.05, B = 100), max.parents = 4, stopIfEmpty = FALSE, silent = TRUE)\n",
     "    seqICP_summary <- summary(seqICP_result)\n",
+    "    parent_set <- seqICP_result$parent.set\n",
+    "\n",
     "''')\n",
     "\n",
     "# Retrieve the results\n",
@@ -131,50 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Call:\n",
-      "lm(formula = Y ~ Xmatrix)\n",
-      "\n",
-      "Residuals:\n",
-      "      Min        1Q    Median        3Q       Max \n",
-      "-0.205831 -0.061317 -0.001113  0.057515  0.266640 \n",
-      "\n",
-      "Coefficients:\n",
-      "             Estimate Std. Error t value Pr(>|t|)    \n",
-      "(Intercept)  0.001799   0.005980   0.301    0.764    \n",
-      "XmatrixX1   -0.583158   0.027397 -21.285  < 2e-16 ***\n",
-      "XmatrixX2   -0.379482   0.047765  -7.945 1.06e-13 ***\n",
-      "XmatrixX3    0.687121   0.018082  38.000  < 2e-16 ***\n",
-      "---\n",
-      "Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1\n",
-      "\n",
-      "Residual standard error: 0.08813 on 216 degrees of freedom\n",
-      "Multiple R-squared:  0.904,\tAdjusted R-squared:  0.9027 \n",
-      "F-statistic: 678.1 on 3 and 216 DF,  p-value: < 2.2e-16\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "# Retrieve the results\n",
-    "lm_result = robjects.r['lm_result']\n",
-    "\n",
-    "# Print the results\n",
-    "print(lm_result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -183,13 +152,121 @@
        "array([1, 3], dtype=int32)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "robjects.r['parent_set']"
+    "\n",
+    "# Retrieve the results\n",
+    "parent_set = robjects.r['parent_set']\n",
+    "\n",
+    "parent_set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>X1</th>\n",
+       "      <th>X2</th>\n",
+       "      <th>X3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>215</th>\n",
+       "      <td>0.150518</td>\n",
+       "      <td>0.329003</td>\n",
+       "      <td>0.749054</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>216</th>\n",
+       "      <td>-0.178003</td>\n",
+       "      <td>-0.087175</td>\n",
+       "      <td>-0.150488</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>217</th>\n",
+       "      <td>0.153092</td>\n",
+       "      <td>0.095745</td>\n",
+       "      <td>0.403728</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>218</th>\n",
+       "      <td>-0.274738</td>\n",
+       "      <td>-0.084745</td>\n",
+       "      <td>0.156119</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>219</th>\n",
+       "      <td>-0.122176</td>\n",
+       "      <td>0.031934</td>\n",
+       "      <td>-0.096661</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           X1        X2        X3\n",
+       "215  0.150518  0.329003  0.749054\n",
+       "216 -0.178003 -0.087175 -0.150488\n",
+       "217  0.153092  0.095745  0.403728\n",
+       "218 -0.274738 -0.084745  0.156119\n",
+       "219 -0.122176  0.031934 -0.096661"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Xmatrix_df.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['X1', 'X3'], dtype='object')"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Xmatrix_df.columns[(parent_set - 1)]"
    ]
   },
   {
