--- a/src/results_report_forecasting.ipynb
+++ b/src/results_report_forecasting.ipynb
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -453,6 +453,9 @@
     "\n",
     "    # Adjust layout for better visualization\n",
     "    plt.tight_layout()\n",
+    "\n",
+    "    # export plot\n",
+    "    fig.savefig(f'{etf}_rolling_mse.png')\n",
     "\n",
     "    # Show the plot\n",
     "    plt.show()"
